fix: remove scrollbar-width property for custom scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@ body{
   color: white;
 }
   .custom-scrollbar {
-    scrollbar-width: thin; 
     scrollbar-color: rgba(255, 255, 255, 0.3) transparent; 
   }
 
